--- a/html/firstpage.html
+++ b/html/firstpage.html
@@ -47,7 +47,7 @@
                 <img src="../img/head1.png" alt="头像" width="100%" height="100%">
             </div>
             <div class="pi-info">
-                <div class="pi-title">口红</div>
+                <div class="pi-title">口红12</div>
                 <div class="pi-name">123</div>
             </div>
         </div>
